# nielsen-interview-project

./: .gitignore  README.md  pyproject.toml
EDA/: EDA.ipynb  utility.py
EDA/.ipynb_checkpoints/: EDA-checkpoint.ipynb
